[package]
name = "rao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# web framework
axum = "0.6.20"
# async HTTP client
reqwest = { version = "0.11.20", features = ["json"] }
# serialization/deserialization  for JSON
serde = "1.0.188"
# async runtime
tokio = { version = "1.32.0", features = ["full"] }
dotenvy = "0.15"
#ideomatic error
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum-macros = "0.3.8"
axum-template = "1.0.0"


# database access
sqlx = { version = "0.7", features = [
	"runtime-tokio-rustls",
	"macros",
	"any",
	"postgres",
] }
