[package]
name = "rao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
# async HTTP client
reqwest = { version = "0.11.20", features = ["json"] }
# serialization/deserialization  for JSON
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
features = "0.10.0"
# async runtime
tokio = { version = "1.32.0", features = ["full"] }
dotenvy = "0.15"
#ideomatic error
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }


# database access
sqlx = { version = "0.7", features = [
	"runtime-tokio-rustls",
	"macros",
	"any",
	"postgres",
] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
